--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,18 @@
 .App {
   text-align: center;
 
+  .intro-text {
+    margin: 1rem;
+  }
   .navbar {
-    padding-top: 3rem;
+    padding-top: 5rem;
   }
   .navbar-brand {
-    margin-left: 1rem;
+    margin-left: 2rem;
+  }
+  .navbar-nav {
+    margin-left: auto;
+    margin-right: 2rem;
   }
 }
 
