--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
     margin: 1rem;
   }
   .navbar {
-    padding-top: 5rem;
+    padding-top: 1rem;
   }
   .navbar-brand {
     margin-left: 2rem;
@@ -14,39 +14,18 @@
     margin-left: auto;
     margin-right: 2rem;
   }
+  .avatar-frame {
+    display: flex;
+    align-items: center;
+    padding-left: 2rem;
+    vertical-align: middle;
+    // justify-content: center;
+    // flex-direction: column;
+    background-color: #212529;
+  }
+
+  .avatar-circle {
+    height: 4rem;
+    width: 4rem;
+  }
 }
-
-// .App-logo {
-//   height: 40vmin;
-//   pointer-events: none;
-// }
-
-// @media (prefers-reduced-motion: no-preference) {
-//   .App-logo {
-//     animation: App-logo-spin infinite 20s linear;
-//   }
-// }
-
-// .App-header {
-//   background-color: #282c34;
-//   min-height: 100vh;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   font-size: calc(10px + 2vmin);
-//   color: white;
-// }
-
-// .App-link {
-//   color: #61dafb;
-// }
-
-// @keyframes App-logo-spin {
-//   from {
-//     transform: rotate(0deg);
-//   }
-//   to {
-//     transform: rotate(360deg);
-//   }
-// }
