--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
 
-  .intro-text {
-    margin: 1rem;
+  .introduction {
+    margin: 10rem;
   }
   .navbar {
     padding-top: 1rem;
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     padding-left: 2rem;
+    padding-top: 1rem;
     vertical-align: middle;
     // justify-content: center;
     // flex-direction: column;
